# paln

./: .gitignore  PALN_Presentation_12Pages.md  PALN_Project_Documentation.md  PALN_Technical_Documentation.md
backend/: AGENTS.md  add_column.py  add_vision_column.py  alembic.ini  check_import.py  check_old_db.py  check_routes.py  migrate_data.py  pyproject.toml  start_server.py  test_doc.txt
backend/app/: __init__.py  config.py  main.py
backend/app/auth/: __init__.py  dependencies.py  jwt_handler.py  models.py
backend/app/db/: database.py  init_db.py  models.py  sqlite.py
backend/app/db/migrations/: env.py
backend/app/db/migrations/versions/: 001_initial.py  002_add_vision_description.py
backend/app/db/repositories/: __init__.py  followup_repo.py  job_repo.py  message_repo.py  session_repo.py  source_repo.py  user_repo.py
backend/app/graph/: __init__.py  graph.py  state.py
backend/app/graph/nodes/: __init__.py  generate.py  retrieve.py  summarize.py
backend/app/routes/: __init__.py  admin.py  auth.py  chat.py  sources.py  summarize.py
backend/app/services/: background_job.py  document_parser.py  ollama_client.py  qdrant_client.py  summarizer.py
backend/app/services/extractors/: __init__.py  audio_extractor.py  image_extractor.py  video_extractor.py
backend/app/services/handlers/: __init__.py  chunker.py  cleaner.py  embedder.py  upload_handler.py
paln-app/: AGENTS.md  eslint.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo
paln-app/src/app/: globals.css  layout.tsx  page.tsx
paln-app/src/components/: AuthForm.tsx  ChatPane.tsx  ContextViewer.tsx  Footer.tsx  NeoButton.tsx  NeoInput.tsx  ScrambleText.tsx  SessionCard.tsx  Sidebar.tsx  SummaryModal.tsx  ThemeToggle.tsx  UploadModal.tsx
paln-app/src/lib/: api.ts
(+10 files in other folders)
