[tool.poetry]
name = "paln-backend"
version = "0.1.0"
description = "SourceSync Backend - AI-powered document analysis"
authors = ["Developer"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"

# Web Framework
fastapi = "^0.109"                  # FastAPI web framework
uvicorn = {extras = ["standard"], version = "^0.27"}  # ASGI server
python-multipart = "^0.0.6"          # File upload handling (Form data)

# Data & Validation
pydantic = {extras = ["email"], version = "^2.5"}  # Data validation + settings
pydantic-settings = "^2.1"          # Settings management with Pydantic
python-dotenv = "^1.0"              # Load .env files
aiosqlite = "^0.19"                 # Async SQLite for database operations

# Vector Database
qdrant-client = "^1.7"                # Qdrant vector database client

# AI Orchestration
langgraph = "^0.2"                     # Build AI workflows as graphs
langchain-core = "^0.3"                # Core utilities for LangChain

# Document Processing
pymupdf = "^1.23"                     # PyMuPDF for PDF parsing
python-docx = "^1.1"                  # DOCX parsing
aiofiles = "^23.2"                    # Async file handling
httpx = "^0.27"                       # HTTP client for URL fetching
beautifulsoup4 = "^4.12"             # HTML parsing for link scraping

# Multimodal Processing
pillow = "^10.0"                     # Image processing
whisper = "^1.0"                     # Audio transcription

# Authentication
python-jose = {extras = ["cryptography"], version = "^3.3"}  # JWT tokens
passlib = {extras = ["bcrypt"], version = "^1.7"}            # Password hashing

# Observability
opik = "^1.0"                         # LLM observability & tracing
